# Projet_GeoNum

./: .gitignore  CMakeLists.txt  README.md  TP1_GN.pro  face.cpp  face.h  halfedge.cpp  halfedge.h  main.cpp  mesh.cpp  mesh.h  vertex.cpp  vertex.h
HalfEdge_structure/: CMakeLists.txt  face.h  mesh.cpp  mesh.h  vertex.cpp  vertex.h
HalfEdge_structure/Tests/: CMakeLists.txt  test_HEStructure.cpp
MarchingCubes_lib/: CMakeLists.txt  MarchingCubes.cpp  MarchingCubes.h
MarchingCubes_lib/Tests/: CMakeLists.txt  test_marchingCubes.cpp
Plane_lib/: CMakeLists.txt  Plane.cpp  Plane.h
Plane_lib/Tests/: CMakeLists.txt  test_Plane.cpp
PlanesGraph_lib/: CMakeLists.txt  Edge.cpp  Edge.h  Node.cpp  Node.h  PlanesGraph.cpp  PlanesGraph.h
PlanesGraph_lib/Tests/: CMakeLists.txt  test_graph.cpp
VoxelGrid_lib/: CMakeLists.txt  VoxelGrid.cpp  VoxelGrid.h
VoxelGrid_lib/Tests/: CMakeLists.txt  test_voxelGrid.cpp
kDTree_lib/: CMakeLists.txt  kDTree.cpp  kDTree.h
kDTree_lib/Tests/: CMakeLists.txt  test_kDTree.cpp
